styles.css
/* ... */
.nav__list {
    list-style: none;
    display: flex;
    height: 100%;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    margin: 0;
    padding: 0;
}

.nav__link {
    color: inherit;
    font-weight: var(--fw-bold);
    font-size: var(--fs-h2);
    text-decoration: none;
}

.nav__link:hover, .nav__link:focus{
    color: var(--clr-accent );
}

.nav-toggle{
    padding: .5em;
    background: transparent;
    border: 0;
    cursor: pointer;
    position: absolute;
    right: 1em;
    top: 2em;
    z-index: 101;
}

.nav-open .nav{
    transform: translateX(0%);
}

.nav-open .nav-toggle{
    position: fixed;
}

.nav-open .hamburger{
    transform: rotate(.625turn);
}

.nav-open .hamburger::before {
    transform: rotate(90deg) translateX(-10px);
}

.nav-open .hamburger::after {
    opacity: 0;
}


.hamburger{
    display: block;
    position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
    background: var(--clr-accent);
    width: 2em;
    height: 0.2em;
    border-radius: 1em;
    transition: transform 250ms ease-in-out;
}

.hamburger::before,
.hamburger::after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
}

.hamburger::before{ top: 0.65em; }
.hamburger::after{ bottom: 0.65em; }

@media(min-width:800px){
    .hamburger,
    .hamburger::before,
    .hamburger::after {
        display: none;
        position: relative;
    }

    .nav-toggle{
        display: none;
    }
}

.nav__list-desktop{
    display: flex;
    position: relative;
}

.nav__item-desktop{
    display: inline-block;
}

.nav__link-desktop{
    display: flex;
    margin  : 0.5em 2em;
    text-decoration: none;
    color: var(--clr-dark);
}

.nav__link-desktop:hover, .nav__link-desktop:focus {
    color: var(--clr-accent);
}

@media(max-width:800px){

    .nav__link-desktop{
        display: none;
    }

    .nav-desktop{
        display: none;
    }

    .nav__item-desktop{
        display: none;
    }
}

/*Intro Section*/

.intro{
    padding: 3em 2em;
    display: flex;
    
    justify-content: center;
    height: 84%;
}



.intro--container{
  display: flex;
  width: 70vw;
  height: 84%;
  flex-direction: row;
  justify-content: space-evenly;

}



.intro-left{
    display: flex;
    justify-content: center;
    top: -22%;
    width: 37%;
}

.intro-left--container{
    display: flex;
    position: relative;
    flex-direction: column;
}

.intro-right{
    display: flex;
    position: relative;
    height: 100%;
    justify-content: space-between;
    flex-direction: column;
    
}

.intro-right--container{
    height: 100%;
    display: flex;
    position: relative;
    flex-direction: column;
}


.section__title--hello {
    font-size: var(--fs-h1);
}

.section__title--logo {
    position: relative;
    display: flex;
    width: 100%;
    height: auto;
    transform: translateY(-20%);
}

.section__title--im{
    padding-bottom: 40%;
    font-size: var(--fs-h2);
}

.section__title--joseph{
    position: absolute;
    top: 10%;
}

.hacker-name{
    overflow: clip;
    white-space: nowrap;
    font-size: var(--fs-h1);
}

.section__title--role-strip {
    position: absolute;
    display: flex;
    justify-content: flex-end;
    background-color: var(--clr-accent);
    width: 72vw;
    overflow: hidden;
    height: 6vw;
    z-index: -1;
    transform: translateX(-43%);
    bottom: 21.5%;
    align-items: center;
    border-radius: 9999px;
}    
    
.section__subtitle--roles {
    position: absolute;
    top: 25%;
    opacity: 0;
    margin-right: 4%;
    transition: opacity 0.5s linear;
}


.section__title--Welcome{
    font-size: var(--fs-h2);
    bottom: 5%;
}

@media(max-width: 800px){
    .intro--container{
        flex-direction: column;
    }

    .section__title--role-strip{
        transform: translateX(-5%);
        height: 12vw;
        width: 110%;
    }

    .intro-left{
        width: 60vw;
    }

    .intro-right{
        transform: translateY();
    }
}

/* Portfolio Item */


/*Intro Section*/

.pf-intro{
    padding: 3vw 2vw;
    display: flex;
    justify-content: center;
    height: 84%;
}

.pf-intro--container{
  display: flex;
  width: 80vw;
  height: 84%;
  flex-direction: row;
  justify-content: space-evenly;

}

.pf-intro-left{
    display: flex;
    justify-content: center;
    width: 40vw;
}

.pf-intro-left--container{
    display: flex;
    position: relative;
    flex-direction: column;
}

.pf-intro-right{
    display: flex;
    position: relative;
    height: 100%;
    justify-content: space-between;
    flex-direction: column;
    margin-left: 1.5em;
}

.pf-intro-right--container{
    height: 100%;
    display: flex;
    position: relative;
    flex-direction: column;
    
}

.pf-section__title--hello {
    font-size: var(--fs-h1);
    margin-top: 0em;
    margin-bottom: 3.5vw;
}

.pf-section__title--logo {
    position: relative;
    display: flex;
    width: 100%;
    height: auto;
    margin-bottom: 3.5vw;
    transform: translateX(0);
}

.pf-section__title--im{
    font-size: var(--fs-h2);
    margin-top: 15vh;
}

.pf-section__title--joseph{
    position: absolute;
    top: 10%;
}

.pf-hacker-name{
    position: relative;
    white-space: nowrap;
    font-size: var(--fs-h1);
    margin-top: 0.5em;
    margin-bottom: 0.5em;

}

.pf-section__title--role-strip {
    position: absolute;
    display: flex;
    justify-content: flex-end;
    background-color: var(--clr-accent);
    overflow: hidden;
    height: 6vw;
    width: 88vw;
    top: 24vw;
    left: -49.5vw;
    z-index: -1;
    align-items: center;
    border-radius: 9999px;
}    
    
.pf-section__subtitle--roles {
    position: relative;
    top: 0;
    margin-right: 4vw;
    font-size: var(--fs-h3);
    transition: opacity 0.5s linear;
}


.pf-section__title--Welcome{
    font-size: var(--fs-h2);
    bottom: 5%;
    margin: 0.5em 0;
}
/* ... */

